[package]
name = "compiler"
version = "0.1.0"
authors = ["fix-fix <fix-fix@users.noreply.github.com>"]
edition = "2021"
workspace = "../.."
default-run = "compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "analyzer"

[[bin]]
name = "parser"

[[bin]]
name = "compiler"

[dependencies]
vm = { path = "../vm" }

[dev-dependencies]
insta = { version = "^1.8.0", features = ["glob"] }
